--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ function exefunction(){
                 var lfckv6 = document.getElementById("lifecheck6").checked;
                 var lfckv7 = document.getElementById("lifecheck7").checked;
                 var lfckv8 = document.getElementById("lifecheck8").checked;
+                if(lfckv1)
+                {
+                  document.getElementById("lifecheck2").value='0';
+                  document.getElementById("lifecheck3").value='0';
+                  document.getElementById("lifecheck4").value='0';
+                  document.getElementById("lifecheck5").value='0';
+                  document.getElementById("lifecheck6").value='0';
+                  document.getElementById("lifecheck7").value='0';
+                  document.getElementById("lifecheck8").value='0';
+                }
                 if(!lfckv1 && !lfckv2 &&!lfckv3 &&!lfckv4 &&
                    !lfckv5 && !lfckv6 &&!lfckv7 &&!lfckv8 )
                 {
